Allow wider display on card backs to fix vertical overflow of long names

--- a/styles.scss
+++ b/styles.scss
@@ -249,6 +249,8 @@ h1.nav {
 }
 
 .cardDisplay {
+  width: 75%;
+
   & h1 {
     font-size: 3rem;
   }
